--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -1,25 +1,27 @@
-name: Spring 
+name: Spring
+
 on:
   push:
     branches: ["master"]
   pull_request:
     branches: ["master"]
+
 jobs:
   build:
-    run-on: windows-latest
+    runs-on: windows-latest  # ✅ fixed (was: run-on)
+
     steps:
-      - name: checkout source
-        uses: action.checkout@v3
-        
+      - name: Checkout source
+        uses: actions/checkout@v3  # ✅ fixed (was: action/checkout)
+
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-           java-version: '21'
-           distribution: 'temurin'
-           
+          java-version: '21'
+          distribution: 'temurin'
+
       - name: Build with Maven
         run: mvn clean install
 
       - name: Run Tests
         run: mvn test
-      
