--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Build with Maven
         run: mvn clean install
 
-      - name: Build with Maven
+      - name: Build without Tests
         run: mvn clean install -DskipTests
