--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -1,27 +1,46 @@
-name: Spring
+name: SpringBoot CI
 
 on:
   push:
-    branches: ["master"]
+    branches: [ "master" ]
   pull_request:
-    branches: ["master"]
+    branches: [ "master" ]
 
 jobs:
   build:
-    runs-on: windows-latest  # ✅ fixed (was: run-on)
+    runs-on: ubuntu-latest
+
+    env:
+      SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/studentdb
+
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_DATABASE: studentdb
+           
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
 
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v3  # ✅ fixed (was: action/checkout)
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn clean install
-
-      - name: Build without Tests
         run: mvn clean install -DskipTests
+
+      - name: Run Tests
+        run: mvn test
