--- a/.github/workflows/springboot.yml
+++ b/.github/workflows/springboot.yml
@@ -12,7 +12,8 @@ jobs:
 
     env:
       SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/studentdb
-
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
 
     services:
@@ -20,7 +21,7 @@ jobs:
         image: mysql:8
         env:
           MYSQL_DATABASE: studentdb
-           
+          MYSQL_ROOT_PASSWORD: root
         ports:
           - 3306:3306
         options: >-
