--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,16 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/**
 
-# DB from Docker Compose env vars
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# Database Configuration (from Docker Compose env vars or hardcoded fallback)
+spring.datasource.url=jdbc:mysql://database-1.cluster-c3yyueow24db.eu-north-1.rds.amazonaws.com:3306/database-1?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.username=admin
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate
+# Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=update
